# ggs

./: .gitignore  CMakeLists.txt  README.md  ggs
app/: CMakeLists.txt  kilemal.cpp
include/: agent.h  command.h  ggs.hpp  world.h  world.hpp  world_state.h
include/ggs/: agent.h  command.h  vec2d.h  world.h  world_config.h  world_state.h
src/: CMakeLists.txt  agent.cc  command.cc  ggs.cpp  vec2d.cc  world.cc  world.cpp  world_config.cc  world_state.cc  world_state.cpp
test/: CMakeLists.txt  command_test.cc  world_state_test.cpp
